# cruzers-book

./: .gitignore  pyproject.toml  scratchpad.ipynb
cruzers_book/: to_pages.py
